--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
         "vue-toastification": "^2.0.0-rc.5"
     },
     "devDependencies": {
-        "@eslint/eslintrc": "^3.0.0",
-        "@eslint/js": "^8.56.0",
+        "@eslint/js": "^9.24.0",
+        "@html-eslint/eslint-plugin": "^0.38.1",
+        "@html-eslint/parser": "^0.38.0",
         "@rushstack/eslint-patch": "^1.3.3",
-        "@stylistic/eslint-plugin-js": "^1.6.0",
-        "@stylistic/eslint-plugin-ts": "^1.6.0",
+        "@stylistic/eslint-plugin-js": "^4.2.0",
+        "@stylistic/eslint-plugin-ts": "^4.2.0",
         "@tsconfig/node21": "^21.0.1",
         "@types/big.js": "^6.2.2",
         "@types/cypress": "^1.1.3",
@@ -52,29 +53,30 @@
         "@types/jquery": "^3.5.29",
         "@types/node": "^20.11.0",
         "@types/vue-select": "^3.16.8",
-        "@typescript-eslint/eslint-plugin": "^6.19.1",
-        "@typescript-eslint/parser": "^6.19.1",
+        "@typescript-eslint/eslint-plugin": "^8.30.1",
+        "@typescript-eslint/parser": "^8.30.1",
         "@vitejs/plugin-vue": "^4.5.2",
         "@vitest/coverage-v8": "^1.2.2",
         "@vitest/ui": "^1.2.2",
-        "@vue/eslint-config-typescript": "^12.0.0",
         "@vue/test-utils": "^2.4.3",
         "@vue/tsconfig": "^0.5.0",
         "chart.js": "^4.4.1",
         "cypress": "^13.6.1",
-        "eslint": "^8.56.0",
-        "eslint-plugin-cypress": "^2.15.1",
-        "eslint-plugin-perfectionist": "^2.5.0",
-        "eslint-plugin-vue": "^9.17.0",
+        "eslint": "^9.24.0",
+        "eslint-plugin-perfectionist": "^4.11.0",
+        "eslint-plugin-vue": "^10.0.0",
         "jsdom": "^23.0.1",
         "npm-run-all2": "^6.1.1",
         "rollup-plugin-copy": "^3.5.0",
         "sass": "^1.70.0",
         "start-server-and-test": "^2.0.3",
+        "stylelint": "^16.18.0",
+        "stylelint-config-standard": "^38.0.0",
+        "stylelint-config-standard-scss": "^14.0.0",
         "typescript": "^5.3.3",
+        "typescript-eslint": "^8.30.1",
         "vite": "^5.0.10",
         "vitest": "^1.0.4",
-        "vue-eslint-parser": "^9.4.2",
         "vue-tsc": "^1.8.27"
     }
 }
