updated eslint and package.json

--- a/package.json
+++ b/package.json
@@ -1,85 +1,87 @@
 {
-  "name": "@chrisjohnsoct/core-vue",
-  "version": "0.0.12",
-  "private": false,
-  "publishConfig": {
-    "@chrisjohnsoct:registry": "https://npm.pkg.github.com"
-  },
-  "type": "module",
-  "files": [
-    "dist/"
-  ],
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "style": "./dist/style.css",
-  "types": "",
-  "typings": "",
-  "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "build-only": "vite build",
-    "coverage": "vitest run --coverage",
-    "lint": "eslint . --fix --ignore-pattern .gitignore",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "test:component": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --component'",
-    "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
-    "type-check": "vue-tsc --noEmit"
-  },
-  "dependencies": {
-    "@aacassandra/vue3-progressbar": "^1.0.3",
-    "big.js": "^6.2.1",
-    "dayjs": "^1.11.10",
-    "dompurify": "^3.0.8",
-    "tsc": "^2.0.4",
-    "uuid": "^9.0.1",
-    "vue": "^3.0.0",
-    "vue-select": "^4.0.0-beta.6",
-    "vue-toastification": "^2.0.0-rc.5"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3.0.0",
-    "@eslint/js": "^8.56.0",
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@stylistic/eslint-plugin-js": "^1.6.0",
-    "@stylistic/eslint-plugin-ts": "^1.6.0",
-    "@tsconfig/node21": "^21.0.1",
-    "@types/big.js": "^6.2.2",
-    "@types/cypress": "^1.1.3",
-    "@types/eslint__eslintrc": "^2.1.1",
-    "@types/eslint__js": "^8.42.3",
-    "@types/jquery": "^3.5.29",
-    "@types/node": "^20.11.0",
-    "@types/vue-select": "^3.16.8",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
-    "@vitejs/plugin-vue": "^4.5.2",
-    "@vitest/coverage-v8": "^1.2.2",
-    "@vitest/ui": "^1.2.2",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.3",
-    "@vue/tsconfig": "^0.5.0",
-    "chart.js": "^4.4.1",
-    "cypress": "^13.6.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-cypress": "^2.15.1",
-    "eslint-plugin-perfectionist": "^2.5.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "jsdom": "^23.0.1",
-    "npm-run-all2": "^6.1.1",
-    "postcss-html": "^1.7.0",
-    "postcss-sass": "^0.5.0",
-    "rollup-plugin-copy": "^3.5.0",
-    "sass": "^1.70.0",
-    "start-server-and-test": "^2.0.3",
-    "stylelint": "^16.12.0",
-    "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-config-standard-scss": "^14.0.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.10",
-    "vitest": "^1.0.4",
-    "vue-eslint-parser": "^9.4.2",
-    "vue-tsc": "^1.8.27"
-  }
+    "name": "@chrisjohnsoct/core-vue",
+    "version": "0.0.14",
+    "private": false,
+    "publishConfig": {
+        "access": "public",
+        "@registry:chrisjohnsoct": "https://registry.npmjs.org"
+    },
+    "type": "module",
+    "files": [
+        "dist/"
+    ],
+    "main": "./dist/index.js",
+    "module": "./dist/index.js",
+    "style": "./dist/style.css",
+    "types": "",
+    "typings": "",
+    "scripts": {
+        "dev": "vite",
+        "build": "run-p type-check \"build-only {@}\" --",
+        "build-only": "vite build",
+        "coverage": "vitest run --coverage",
+        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+        "preview": "vite preview",
+        "site:build": "vite build --config vite.site.config.ts --outDir dist/site",
+        "site:preview": "npm run build && npm run site:build && vite preview --outDir dist/site --base core-vue",
+        "test:unit": "vitest",
+        "test:component": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --component'",
+        "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
+        "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
+        "type-check": "vue-tsc --noEmit"
+    },
+    "dependencies": {
+        "@aacassandra/vue3-progressbar": "^1.0.3",
+        "big.js": "^6.2.1",
+        "dayjs": "^1.11.10",
+        "dompurify": "^3.0.8",
+        "tsc": "^2.0.4",
+        "uuid": "^9.0.1",
+        "vue": "^3.0.0",
+        "vue-select": "^4.0.0-beta.6",
+        "vue-toastification": "^2.0.0-rc.5"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.27.0",
+        "@html-eslint/eslint-plugin": "^0.41.0",
+        "@html-eslint/parser": "^0.41.0",
+        "@rushstack/eslint-patch": "^1.3.3",
+        "@stylistic/eslint-plugin": "^4.4.1",
+        "@tsconfig/node21": "^21.0.1",
+        "@types/big.js": "^6.2.2",
+        "@types/cypress": "^1.1.3",
+        "@types/eslint__eslintrc": "^2.1.1",
+        "@types/eslint__js": "^8.42.3",
+        "@types/jquery": "^3.5.29",
+        "@types/node": "^20.11.0",
+        "@types/vue-select": "^3.16.8",
+        "@typescript-eslint/eslint-plugin": "^8.30.1",
+        "@typescript-eslint/parser": "^8.30.1",
+        "@vitejs/plugin-vue": "^4.5.2",
+        "@vitest/coverage-v8": "^1.2.2",
+        "@vitest/eslint-plugin": "^1.1.39",
+        "@vitest/ui": "^1.2.2",
+        "@vue/eslint-config-typescript": "^14.5.0",
+        "@vue/test-utils": "^2.4.3",
+        "@vue/tsconfig": "^0.5.0",
+        "chart.js": "^4.4.1",
+        "cypress": "^13.6.1",
+        "eslint": "^9.22.0",
+        "eslint-plugin-perfectionist": "^4.13.0",
+        "eslint-plugin-vue": "~10.0.0",
+        "jsdom": "^23.0.1",
+        "npm-run-all2": "^6.1.1",
+        "rollup-plugin-copy": "^3.5.0",
+        "sass": "^1.70.0",
+        "start-server-and-test": "^2.0.3",
+        "stylelint": "^16.19.1",
+        "stylelint-config-html": "^1.1.0",
+        "stylelint-config-standard": "^38.0.0",
+        "stylelint-config-standard-scss": "^15.0.1",
+        "typescript": "^5.3.3",
+        "typescript-eslint": "^8.33.0",
+        "vite": "^5.0.10",
+        "vitest": "^1.0.4",
+        "vue-tsc": "^2.2.8"
+    }
 }
