--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,26 +1,84 @@
 {
-        "extends": [
-                "stylelint-config-standard-scss"
+    "cache": true,
+    "defaultSeverity": "warning",
+    "extends": [
+        "stylelint-config-html",
+        "stylelint-config-standard"
+    ],
+    "fix": true,
+    "rules": {
+        "color-function-notation": "modern",
+        "color-hex-length": "long",
+        "comment-whitespace-inside": "always",
+        "custom-property-empty-line-before": "never",
+        "declaration-block-no-redundant-longhand-properties": false,
+        "declaration-block-no-shorthand-property-overrides": true,
+        "declaration-empty-line-before": "never",
+        "declaration-property-unit-allowed-list": {
+            "font-size": [
+                "px",
+                "rem",
+                "vh",
+                "vw"
+            ]
+        },
+        "font-family-name-quotes": "always-unless-keyword",
+        "font-weight-notation": "numeric",
+        "function-name-case": "lower",
+        "function-url-quotes": "always",
+        "import-notation": "string",
+        "max-nesting-depth": 2,
+        "media-feature-range-notation": "prefix",
+        "rule-empty-line-before": [
+            "always",
+            {
+                "except": "first-nested"
+            }
         ],
-        "overrides": [
-                {
-                        "files": [
-                                "*.scss",
-                                "**/*.scss"
+        "selector-attribute-quotes": "always",
+        "selector-class-pattern": null,
+        "selector-max-compound-selectors": 3,
+        "selector-pseudo-element-colon-notation": "double",
+        "selector-type-case": "lower",
+        "shorthand-property-no-redundant-values": false,
+        "value-keyword-case": "lower"
+    },
+    "overrides": [
+        {
+            "files": [
+                "**/*.scss"
+            ],
+            "extends": [
+                "stylelint-config-standard-scss"
+            ],
+            "rules": {
+                "scss/at-mixin-named-arguments": "always",
+                "scss/dollar-variable-empty-line-after": [
+                    "always",
+                    {
+                        "expect": [
+                            "last-nested",
+                            "before-dollar-variable"
                         ],
-                        "extends": [
-                                "stylelint-config-standard-scss"
+                        "ignore": [
+                            "inside-single-line-block"
                         ]
-                },
-                {
-                        "files": [
-                                "*.vue",
-                                "**/*.vue"
+                    }
+                ],
+                "scss/dollar-variable-first-in-block": [
+                    true,
+                    {
+                        "except": [
+                            "root"
                         ],
-                        "extends": [
-                                "stylelint-config-standard-scss",
-                                "stylelint-config-recommended-vue/scss"
+                        "ignore": [
+                            "comments",
+                            "imports"
                         ]
-                }
-        ]
+                    }
+                ],
+                "scss/dollar-variable-no-missing-interpolation": true
+            }
+        }
+    ]
 }
