eslint/stylelint mods/fixes/etc

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,8 @@
     "cache": true,
     "defaultSeverity": "warning",
     "extends": [
+        "stylelint-config-html",
+        "stylelint-config-recommended-vue",
         "stylelint-config-standard"
     ],
     "fix": true,
@@ -11,11 +13,14 @@
         "comment-whitespace-inside": "always",
         "custom-property-empty-line-before": "never",
         "declaration-block-no-redundant-longhand-properties": false,
+        "declaration-block-no-shorthand-property-overrides": true,
         "declaration-empty-line-before": "never",
         "declaration-property-unit-allowed-list": {
             "font-size": [
                 "px",
-                "rem"
+                "rem",
+                "vh",
+                "vw"
             ]
         },
         "font-family-name-quotes": "always-unless-keyword",
@@ -42,7 +47,6 @@
     "overrides": [
         {
             "files": [
-                "*.scss",
                 "**/*.scss"
             ],
             "extends": [
@@ -53,7 +57,7 @@
                 "scss/dollar-variable-empty-line-after": [
                     "always",
                     {
-                        "expect": [
+                        "except": [
                             "last-nested",
                             "before-dollar-variable"
                         ],
