--- a/package.json
+++ b/package.json
@@ -42,12 +42,11 @@
         "vue-toastification": "^2.0.0-rc.5"
     },
     "devDependencies": {
-        "@eslint/js": "^9.24.0",
-        "@html-eslint/eslint-plugin": "^0.38.1",
-        "@html-eslint/parser": "^0.38.0",
+        "@eslint/js": "^9.27.0",
+        "@html-eslint/eslint-plugin": "^0.41.0",
+        "@html-eslint/parser": "^0.41.0",
         "@rushstack/eslint-patch": "^1.3.3",
-        "@stylistic/eslint-plugin-js": "^4.2.0",
-        "@stylistic/eslint-plugin-ts": "^4.2.0",
+        "@stylistic/eslint-plugin": "^4.4.1",
         "@tsconfig/node21": "^21.0.1",
         "@types/big.js": "^6.2.2",
         "@types/cypress": "^1.1.3",
@@ -60,22 +59,28 @@
         "@typescript-eslint/parser": "^8.30.1",
         "@vitejs/plugin-vue": "^4.5.2",
         "@vitest/coverage-v8": "^1.2.2",
+        "@vitest/eslint-plugin": "^1.1.39",
         "@vitest/ui": "^1.2.2",
         "@vue/test-utils": "^2.4.3",
         "@vue/tsconfig": "^0.5.0",
         "chart.js": "^4.4.1",
         "cypress": "^13.6.1",
-        "eslint": "^9.24.0",
-        "eslint-plugin-perfectionist": "^4.11.0",
-        "eslint-plugin-vue": "^10.0.0",
+        "eslint": "^9.22.0",
+        "eslint-plugin-perfectionist": "^4.13.0",
+        "eslint-plugin-vue": "~10.0.0",
         "jsdom": "^23.0.1",
         "npm-run-all2": "^6.1.1",
+        "postcss-cli": "^11.0.1",
+        "postcss-html": "^1.8.0",
+        "postcss-scss": "^4.0.9",
         "rollup-plugin-copy": "^3.5.0",
-        "sass": "^1.70.0",
+        "sass-embedded": "^1.89.0",
         "start-server-and-test": "^2.0.3",
-        "stylelint": "^16.18.0",
+        "stylelint": "^16.19.1",
+        "stylelint-config-html": "^1.1.0",
+        "stylelint-config-recommended-vue": "^1.6.0",
         "stylelint-config-standard": "^38.0.0",
-        "stylelint-config-standard-scss": "^14.0.0",
+        "stylelint-config-standard-scss": "^15.0.1",
         "typescript": "^5.3.3",
         "typescript-eslint": "^8.30.1",
         "vite": "^5.0.10",
